--- a/web-project/configmap.yaml
+++ b/web-project/configmap.yaml
@@ -1,9 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: postgres-configmap
-  labels:
-    app: postgres
+  name: my-configmap  
 data:
-  POSTGRES_DB: devops_db  
-  PGDATA: /data
+  postgres-db: devops_db  
+  postgres-data: /data
