--- a/web-project/deployment.yaml
+++ b/web-project/deployment.yaml
@@ -1,7 +1,46 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: web
+  name: my-pgadmin
+  labels:
+    app: pgadmin
+spec:  
+  replicas: 1
+  selector:
+    matchLabels:
+      app: pgadmin
+  template:
+    metadata:
+      labels:
+        app: pgadmin
+    spec:      
+      containers:
+      - name: pgadmin
+        image: dpage/pgadmin4:4.18
+        ports:
+          - name: http-port
+            containerPort: 80
+        env:
+        - name: PGADMIN_DEFAULT_EMAIL
+          valueFrom:
+                secretKeyRef:
+                  name: postgres-secrets
+                  key: pgadmin-email
+        - name: PGADMIN_DEFAULT_PASSWORD
+          valueFrom:
+                secretKeyRef:
+                  name: postgres-secrets
+                  key: pgadmin-password
+        
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: my-web
+  labels:
+    app: web
 spec:  
   replicas: 1
   selector:
@@ -12,12 +51,12 @@ spec:
       labels:
         app: web
     spec:      
-      serviceAccountName: secret-access-sa
       containers:
       - name: web
-        image: nick1846/my-php:12.0
+        image: nick1846/my-php:9.0
         ports:
           - name: http-port
             containerPort: 80
-            protocol: "TCP"
+       
+            
        
