--- a/web-project/secrets.yaml
+++ b/web-project/secrets.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: postgres-secrets
-  labels:
-    app: postgres
+  name: postgres-secrets 
 type: Opaque
 data:
-  POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: postgres2020
+  postgres-user: cG9zdGdyZXM=
+  postgres-password: cG9zdGdyZXMyMDIw
+  pgadmin-password: cGdhZG1pbjIwMjA=
+  pgadmin-email: bmlja0BnbWFpbC5jb20=
  #pg-db-password: postgres2020
